# CuraEngine_plugin_pattern

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
CuraEnginePattern/: CuraEnginePattern.py  __init__.py  constants.py  infill_settings.def.json  package.json  plugin.json
include/infill/: geometry.h  hilbert.h  infill.h  pattern.h
include/plugin/: generate.h  settings.h
src/: main.cpp
